force-app/main/default/objects/Stage_Tracking_Demo__c/Stage_Tracking_Demo__c.object-meta.xml
<CustomObject>
    <description>Reference implementation and test fixture. Ships with a stage picklist and its tracking fields already built, so the Apex test suite can exercise the engine in an org where nothing has been generated yet. Also serves as a worked example for administrators.</description>
    <label>Stage Tracking Demo</label>
    <nameField>
        <label>Stage Tracking Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Tracking Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>