force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Cumulative_Time_Draft__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Time_Draft__c</fullName>
    <label>Cumulative time in Draft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>