force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Entered_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Approved__c</fullName>
    <label>Date entered Approved</label>
    <type>DateTime</type>
</CustomField>