force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Entered_Awaiting_Countersignature_R__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Awaiting_Countersignature_R__c</fullName>
    <label>Date entered Awaiting Countersignature R</label>
    <type>DateTime</type>
</CustomField>