force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Entered_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_In_Review__c</fullName>
    <label>Date entered In Review</label>
    <type>DateTime</type>
</CustomField>