force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Entered_Pending__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Pending__c</fullName>
    <label>Date entered Pending</label>
    <type>DateTime</type>
</CustomField>