force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Exited_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Exited_Approved__c</fullName>
    <label>Date exited Approved</label>
    <type>DateTime</type>
</CustomField>