force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Exited_Awaiting_Countersignature_Re__c.field-meta.xml
<CustomField>
    <fullName>Date_Exited_Awaiting_Countersignature_Re__c</fullName>
    <label>Date exited Awaiting Countersignature Re</label>
    <type>DateTime</type>
</CustomField>