force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Exited_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Exited_Complete__c</fullName>
    <label>Date exited Complete</label>
    <type>DateTime</type>
</CustomField>