force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Exited_Draft__c.field-meta.xml
<CustomField>
    <fullName>Date_Exited_Draft__c</fullName>
    <label>Date exited Draft</label>
    <type>DateTime</type>
</CustomField>