force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Date_Exited_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Exited_In_Review__c</fullName>
    <label>Date exited In Review</label>
    <type>DateTime</type>
</CustomField>