force-app/main/default/objects/Stage_Tracking_Demo__c/fields/Latest_Time_Approved__c.field-meta.xml
<CustomField>
    <fullName>Latest_Time_Approved__c</fullName>
    <label>Latest time in Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>